Sat Dec 18 05:29:29 1999  Scott Bambrough  <scottb@netwinder.org>

	* config/arm/linux-elf.h: Change all instances of 
	ARM_FLAG_SHORT_BYTES to ARM_FLAG_MMU_TRAPS.
	* config/arm/uclinux-elf.h: Likewise.

1999-12-15  Bernd Schmidt  <bernds@cygnus.co.uk>

	* config/arm/arm.md (neg_pool_offset): Provide default for new
	attribute.
	(arm_movsi_insn): Add neg_pool_offset attribute.
	* config/arm/arm.c (arm_find_barrier): Replace arg FIX with an
	rtx for the insn that starts the scan and an unsigned long for its
	address.  Add MIN_OFFSET and PINSERTED args.  All callers changed.
	Change scan to ignore insns before MIN_OFFSET.  Store size of inserted
	instructions in *PINSERTED.
	(struct minipool_fixup): Add MIN_ADDRESS elt.
	(sort_fixups): Compute it.
	(arm_reorg): Changes to support inserting pools before the insn to be
	fixed up.

Mon Dec 13 09:34:31 1999  Clinton Popetz  <cpopetz@cygnus.com>

	* config/arm/arm.md (mulsidi3adddi, umulsidi3adddi): New patterns
	for long long multiply-accumlate.

1999-12-08  Bernd Schmidt  <bernds@cygnus.co.uk>

	* config/arm/elf.h (MULTILIB_DEFAULTS): Add "marm".
	* config/arm/linux-elf.h (MULTILIB_DEFAULTS): Add "marm".
	* config/arm/coff.h (MULTILIB_DEFAULTS): Add "marm".

1999-11-21  Nick Clifton  <nickc@cygnus.com>

	* invoke.texi (ARM Options): Replace -mshort-load-bytes with
	-malignment-traps. 
	(arm.h): Replace -mshort-load-bytes with -malignment-traps.
	(arm.c): Replace TARGET_SHORT_BY_BYTES with TARGET_MMU_TRAPS.
	(arm.md): Replace TARGET_SHORT_BY_BYTES with TARGET_MMU_TRAPS.

Fri Nov 12 13:28:58 1999  Bernd Schmidt  <bernds@cygnus.co.uk>

	* config/arm/arm.h (ARM_LEGITIMIZE_RELOAD_ADDRESS): Treat QImode
	addresses the same way GO_IF_LEGITIMATE_INDEX does. 

Wed Nov  3 10:04:07 1999  Nick Clifton  <nickc@cygnus.com>

	* config/arm/semi.h (TARGET_VERSION): Do not define if already
	defined.
	(TARGET_DEFAULT): Do not define if already defined.

Tue Nov  2 10:37:25 1999  Nick Clifton  <nickc@cygnus.com>
